--- a/Boekenzoeker.html
+++ b/Boekenzoeker.html
@@ -59,18 +59,18 @@
 			</div>
 			</div>
 			<div class="ZJBIMG">
-			<img src="images/ZJBscherm1.png" class="ZJBimg1">
-			<img src="images/ZJBscherm2.png" class="ZJBimg2">
-			<img src="images/ZJBscherm3.png" class="ZJBimg3">
-			<img src="images/ZJBscherm4.png" class="ZJBimg4">
-			<img src="images/ZJBscherm5.png" class="ZJBimg5">
-			<img src="images/ZJBscherm6.png" class="ZJBimg6">
-			<img src="images/ZJBscherm7.png" class="ZJBimg7">
-			<img src="images/ZJBscherm8.png" class="ZJBimg8">
-			<img src="images/ZJBscherm9.png" class="ZJBimg9">
-			<img src="images/ZJBscherm10.png" class="ZJBimg10">
-			<img src="images/ZJBscherm11.png" class="ZJBimg11">
-			<img src="images/ZJBscherm12.png" class="ZJBimg12">
+			<img src="/images/ZJBscherm1.png" class="ZJBimg1">
+			<img src="/images/ZJBscherm2.png" class="ZJBimg2">
+			<img src="/images/ZJBscherm3.png" class="ZJBimg3">
+			<img src="/images/ZJBscherm4.png" class="ZJBimg4">
+			<img src="/images/ZJBscherm5.png" class="ZJBimg5">
+			<img src="/images/ZJBscherm6.png" class="ZJBimg6">
+			<img src="/images/ZJBscherm7.png" class="ZJBimg7">
+			<img src="/images/ZJBscherm8.png" class="ZJBimg8">
+			<img src="/images/ZJBscherm9.png" class="ZJBimg9">
+			<img src="/images/ZJBscherm10.png" class="ZJBimg10">
+			<img src="/images/ZJBscherm11.png" class="ZJBimg11">
+			<img src="/images/ZJBscherm12.png" class="ZJBimg12">
 		</div>
 		<img src="images/ZJBmockup.png" class="sunWoordlogo">
 		<div class="volgendeC">
