--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<section class="sectionTekst">
 			<article>
 				<p>Ik ben een</p>
-				<div class="passie">gepassioneerde</div>
+				<div id="passie">gepassioneerde</div>
 				<p>ontwerper die houdt van:</p>
 
 				<details class="custom-select">
