--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Pertfolio</title>
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/LogoPortfolio.png">
+	<link rel="icon" type="image/x-icon" href="images/LogoPortfolio.png">
 </head>
 
 <body>
@@ -49,8 +49,8 @@
 		<section class="sectionTekst">
 			<article>
 				<p>Ik ben een</p>
-				<div id="passie">gepassioneerde</div>
-				<p>ontwerper die houdt van:</p>
+				<div class="passie">gepassioneerde</div>
+				<p>ontwerper die houd van:</p>
 
 				<details class="custom-select">
 					<summary class="radios">
@@ -81,17 +81,17 @@
 					  <input type="radio" name="item" id="item24" title="Instapschoenen">
 					  <input type="radio" name="item" id="item25" title="Kraakdekens">
 					  <input type="radio" name="item" id="item26" title="Eline">
-					  <input type="radio" name="item" id="item27" title="De Ikea">
+					  <input type="radio" name="item" id="item27" title="De IKEA">
 					  <input type="radio" name="item" id="item28" title="Chillen">
 					  <input type="radio" name="item" id="item29" title="Stroopwafels">
 					  <input type="radio" name="item" id="item30" title="Kleur">
 					  <input type="radio" name="item" id="item31" title="Schoonmaken (soms)">
 					  <input type="radio" name="item" id="item32" title="Koffie">
-					  <input type="radio" name="item" id="item33" title="Comedyfilms">
+					  <input type="radio" name="item" id="item33" title="Comedy films">
 					  <input type="radio" name="item" id="item34" title="Kung-Fu panda">
 					  <input type="radio" name="item" id="item35" title="Oranje">
 					  <input type="radio" name="item" id="item36" title="Linnen broeken">
-					  <input type="radio" name="item" id="item37" title="Uiteten">
+					  <input type="radio" name="item" id="item37" title="Uit eten">
 					  <input type="radio" name="item" id="item38" title="Wind mee">
 					  <input type="radio" name="item" id="item39" title="Vissen">
 					  <input type="radio" name="item" id="item40" title="Achtbanen">
