--- a/overmij.html
+++ b/overmij.html
@@ -27,29 +27,28 @@
 		<img src="images/Overmij.png" class="sunWoordlogo">
 		<section class="case">
 			<div class="fotosOverMij">
-			<img class="foto1" src="images/WiebenIk.png">
-			<img class="foto2" src="images/foto1.jpeg">
-		</div>
+				<img class="foto1" src="images/WiebenIk.png">
+				<img class="foto2" src="images/foto1.jpeg">
+			</div>
 			<div class="caseDiv2Overmij">
 				<div class="div1">
 					<h3>Over mij</h3>
 				</div>
 				<div class="div2">
-					<p class="Pcase">Ik ben een enthousiaste Communicatie en Multimedia student
-						die dit jaar aan zijn 3de jaar begint. Ik ben momenteel erg geintreseerd in branding maar
-						ik hou er vooral van om creatief bezig te zijn. In mijn vrije tijd sport en illustreer ik graag.
-						Ik ben een fanatieke hockeyer die ook op zijn tijd in de sportschool te vinden is. Ik zit op
-						kamers
-						in Amstelveen waar ik maarliefst 13 huisgenoten heb. Ik hou enorm van koken en eten dus als ik
-						de
-						tijd heb maak ik graag iets lekkers. In dit portfolio staat niet het gehele proces van ieder werk. Ben je 
-					hier benieuwd naar, neem dan gerust contact met me op.</p>
+					<p class="Pcase">Ik ben een enthousiaste derdejaars Communicatie en Multimedia student die
+						momenteel erg geïnteresseerd is in branding. Daarnaast houd ik ervan om vooral creatief bezig te
+						zijn. In mijn vrije tijd sport en illustreer ik graag. Ik ben een fanatieke hockeyer die ook op
+						zijn tijd in de sportschool te vinden is. Op dit moment woon ik op kamers in Amstelveen met maar
+						liefst 13 huisgenoten. Ik hou van koken en lekker eten, dus als ik de tijd heb sta ik graag in
+						de keuken. In dit portfolio staat niet het gehele proces van al mijn werk. Ben je benieuwd wat
+						ik nog meer kan, neem dan gerust contact met me op.</p>
 				</div>
 				<div class="div3">
 					<h3>Opleidingen</h3>
 				</div>
 				<div class="div4">
-					<p class="Pcase">Ik ga nu naar mijn 3de jaar Communicatie en Multimedia Design op de Hogeschool van
+					<p class="Pcase">Ik ben een derdejaars student Communicatie en Multimedia Design aan de Hogeschool
+						van
 						Amsterdam.
 						Daarvoor heb ik mijn HAVO diploma gehaald in Woerden en heb ik nog een jaar op de tekenacademie
 						gezeten.</p>
@@ -58,19 +57,23 @@
 					<h3>Vaardigheden</h3>
 				</div>
 				<div class="div6">
-					<p class="Pcase"> Ik ben vloeiend in zowel Nederlands als Engels. HTML en CSS krijg ik steeds meer
-						onder de knie, hier liggen alleen niet mijn ambities. Dit Portfolio is
-						waarschijnlijk het laatste wat ik in een tijdje zal coderen dus hier zal ik ook geen grote
-						stappen in maken. Verder heb ik Figma en Illustrator ondertussen ook goed onder controle en ben ik momenteel alle ins en outs van photoshop aan het onderzoeken.
-						Verder heb ik zeer weinig ervaring met InDesign en After Effects, hier heb ik nog niet veel te maken mee gehad.
+					<p class="Pcase"> HTML en CSS gaan me beide goed af, ook al zal ik dit de komende tijd
+						waarschijnlijk niet veel gebruiken omdat hier mijn interesses niet liggen. Verder durf ik wel te
+						zeggen dat ik kan illustreren, dit vind ik leuk om te doen en hiervoor heb ik een jaar op de
+						tekenacademie gezeten. Illustrator en Photoshop heb ik beide onder controle, maar ik kan me nog
+						wel ontwikkelen in deze programma's. Met Figma heb ik erg veel ervaring en ken ik door en door,
+						ik heb hier al heel wat prototypes mee gemaakt.
 					</p>
 				</div>
 			</div>
+			<div class="div7">
 			<h3>Feitjes over mij</h3>
+		</div>
+		<div class="div8">
 			<p class="naam">Hier komt een feitje.</p>
-			
+		</div>
 			<a class="button"><img src="images/SPIN.png" class="Spin"></a>
-		
+
 		</section>
 	</main>
 	<footer id="footer">
