--- a/passieproject.html
+++ b/passieproject.html
@@ -27,60 +27,55 @@
 		<section class="case">
 			<img src="images/passieprojectvoorkantdoos1.png" class="sunWoordlogo">
 			<div class="OpDa">
-			<p class="OpDaTekst">Opdrachtgever: School</p>
-			<p class="OpDaTekst">Datum: 18//06//2023</p>
-		</div>
-			<h1>Save The Turtle - Het bewust maken van de plastic soep bij kinderen doormiddel van een bordspel.</h1>
+				<p class="OpDaTekst">Opdrachtgever: School</p>
+				<p class="OpDaTekst">Datum: 18//06//2023</p>
+			</div>
+			<h1>Save the turtle - Een bordspel waarbij kinderen bewust worden van de plastic soep in de oceanen.</h1>
 			<div class="caseDiv2">
 				<div class="div1">
-			<h3>Concept</h3>
-		</div>
-		<div class="div2">
-			<p class="Pcase">Voor dit project mochten we alles maken wat we wilden, zolang het maar de wereld
-				verbeterde.
-				We hebben met een groep van 3 onze passies gecombineerd en zijn zo bij dit concept gekomen, Save the
-				turtle.
-				Het idee is om basisschoolleerlingen bewust te maken van de plastic soep met een interactief bordspel.
-				Door informatieve kaartjes
-				en 3d geprinte plastic flessen proberen we de kinderen wat meer bewust te maken in wat ze zelf kunnen
-				bijdragen om
-				de zee een stukje schoner te houden. Het doel van het spel is om de schildpadden te redden van het
-				plastic. Door kaartjes en tegels
-				kun je flesjes uit de zee vissen of van elkaar stelen, die je uiteindelijk nodig hebt om te winnen. </p>
-			</div>
-			<div class="div3">
-			<h3>Visual design</h3>
-			</div>
-			<div class="div4">
-			<p class="Pcase">Tijdens dit project was ik vooral verantwoordelijk voor de vormgeving van het project. Ik wou de kinderen
-				aanspreken
-				door veel verschillende bijzondere illustraties te maken om hun interesse te behouden zodat ze niet snel
-				verveeld raken,
-				(ook vond ik dit leuk om te doen). We hadden besloten dat er op het bord ook genoeg te zien moest zijn
-				dus hebben we
-				voor iedere laag een nieuw terrein verzonnen. Het project ging natuurlijk over de zee dus dit heb ik
-				verwerkt in
-				de alle vormgeving, zowel de karakters als de posters voor de exposities die we hadden.
-			</p>
-		</div>
+					<h3>Concept</h3>
+				</div>
+				<div class="div2">
+					<p class="Pcase">Het onderwerp van dit project was geheel vrijgelaten, zolang het maar de wereld
+						verbeterde. We hebben met een groep van 3 studenten onze passies gecombineerd en zijn zo bij het
+						concept “Save the turtle” gekomen. Het idee is om basisschoolleerlingen bewust te maken van de
+						plastic soep door het spelen van een interactief bordspel. Door informatieve kaartjes en 3d
+						geprinte plastic flessen proberen we de kinderen meer bewust te maken van de plastic soep en wat
+						ze zelf kunnen bijdragen om de zee een stukje schoner te houden. Het doel van het spel is om de
+						schildpadden te redden van het plastic. Door kaartjes en tegels kun je flesjes uit de zee vissen
+						of van elkaar stelen, die je uiteindelijk nodig hebt om te winnen.</p>
+				</div>
+				<div class="div3">
+					<h3>Visual design</h3>
+				</div>
+				<div class="div4">
+					<p class="Pcase">Tijdens dit project was ik vooral verantwoordelijk voor de vormgeving van het
+						project. Ik wil de kinderen aanspreken door veel verschillende bijzondere illustraties te maken
+						om daarmee hun interesse te behouden en niet snel verveeld raken (daarnaast vond ik dit ook
+						gewoon erg leuk om te maken). We hadden daarnaast besloten dat er op het bord genoeg te zien
+						moest zijn dus hebben we voor iedere laag een nieuw terrein verzonnen. Het project gaat over de
+						oceanen dus dit thema heb ik verwerkt in de alle vormgeving: zowel in de gemaakte karakters als
+						de posters voor de exposities.
+					</p>
+				</div>
 			</div>
 			<div class="flexSTT">
-			<img src="images/Posterpassieproject.png" >
-			<img src="images/passieprojectPoster2.png" >
-		</div>
-		<img src="images/STTmocu.png" class="sunWoordlogo">
-		<div class="STTIMG">
-			<img src="images/bordOnderlaag.png" class="STTimg1">
-			<img src="images/bordLaag1.png" class="STTimg2">
-			<img src="images/bordLaag2.png" class="STTimg3">
-			<img src="images/bordLaag3.png" class="STTimg4">
-			<img src="images/bordLaag4.png" class="STTimg5">
-			<img src="images/bordLaag5.png" class="STTimg6">
-		</div>
-		<div class="flexSTT">
-		<img src="images/STTprint.png">
-			<img src="images/STTPion.png" >
-		</div>
+				<img src="images/Posterpassieproject.png">
+				<img src="images/passieprojectPoster2.png">
+			</div>
+			<img src="images/STTmocu.png" class="sunWoordlogo">
+			<div class="STTIMG">
+				<img src="images/bordOnderlaag.png" class="STTimg1">
+				<img src="images/bordLaag1.png" class="STTimg2">
+				<img src="images/bordLaag2.png" class="STTimg3">
+				<img src="images/bordLaag3.png" class="STTimg4">
+				<img src="images/bordLaag4.png" class="STTimg5">
+				<img src="images/bordLaag5.png" class="STTimg6">
+			</div>
+			<div class="flexSTT">
+				<img src="images/STTprint.png">
+				<img src="images/STTPion.png">
+			</div>
 			<img src="images/STTkaart.png" class="sunWoordlogo">
 
 			<div class="volgendeC">
