--- a/sunseeker.html
+++ b/sunseeker.html
@@ -27,65 +27,71 @@
 		<section class="case">
 			<img src="images/Group65.png" class="sunWoordlogo">
 			<div class="OpDa">
-			<p class="OpDaTekst">Opdrachtgever: School</p>
-			<p class="OpDaTekst">Datum: 25//05//2024</p>
-		</div>
+				<p class="OpDaTekst">Opdrachtgever: School</p>
+				<p class="OpDaTekst">Datum: 25//05//2024</p>
+			</div>
 			<h1>SunSeekers - Een concept dat leguanen helpt meer energie te krijgen van de zon.</h1>
 			<div class="caseDiv">
 				<div class="div1">
-			<h3>Concept</h3>
-		</div>
-			<div class="div2">
-			<p class="Pcase">Leguanen hebben veel zon nodig op een dag en halen hier onwijs veel voordelen uit. SunSeekers 
-				helpt leguanen hiermee doormiddel van een app die volgt hoelang ze in de zon zitten. Door visueel te laten zien 
-			hoelang ze nog in de zon moeten zitten en welke voordelen ze hieruit halen, motiveren we de leguanen om meer in de 
-		zon te zitten en het beste uit zichzelf te halen. </p>
-			</div>
+					<h3>Concept</h3>
+				</div>
+				<div class="div2">
+					<p class="Pcase">Leguanen hebben dagelijks veel zon nodig en halen hier onwijs veel voordelen uit.
+						Ik heb een app ontwikkeld die leguanen helpt om de voordelen uit de zon te halen. Door visueel
+						te laten zien
+						hoelang ze nog in de zon moeten zitten en welke voordelen ze hieruit halen, worden de leguanen
+						gemotiveerd om meer in de
+						zon te zitten en het beste uit zichzelf te halen. </p>
+				</div>
 				<div class="div3">
-			<h3>Behavior design</h3>
-		</div>
-			<div class="div4">
-			<p class="Pcase">In deze website en app zitten een aantal psychologische theorieen waarmee we de leguanen op een ethische wijze
-				 onze app verkopen en laten gebruiken. Zo wordt de leguaan door een "funnel" geleidt waar hij doormiddel van kleine 
-				 trucjes overtuigd wordt zich aan te sluiten bij SunSeekers. Benieuwd naar deze trucjes of mijn proces? Neem gerust contact 
-				 met me op, info staat in de footer.
-			</p>
-		</div>
-			<div class="div5">
-			<h3>Visual design</h3>
-		</div>
-			<div class="div6">
-			<p class="Pcase">Voor de visuals ben ik in het thema gebleven van het leefgebied van de leguaan en de zon, Ik heb
-dus geel als hoofdkleur gebruikt. De look and feel van dit project is professioneel en modern. Hier heb ik voor gekozen omdat 
-het een geloofwaardig concept moet zijn waar de leguaan zich bij aan wil sluiten en hier trots op is. Om de leguanen wel nog te 
-laten resoneren met dit concept heb ik het nog wat teogankelijker gemaakt met de doodles en de fotografie.
-			</p>
-		</div>
-		</div>
-				
-<img src="images/MockupSS2.png" class="sunWoordlogo">
-<div class="schermen">
-<img src="images/SSlandingscherm.png" class="sunSchermen">
-<img src="images/SSscherm2.png" class="sunSchermen">
-<img src="images/SSscherm5.png" class="sunSchermen">
-<img src="images/SSscherm3.png" class="sunSchermen">
-<img src="images/SSinstellingen.png" class="sunSchermen">
-<img src="images/SSscherm4.png" class="sunSchermen">
-<img src="images/SSmeldingen.png" class="sunSchermen">
-<img src="images/SSscherm1.png" class="sunSchermen">
-<img src="images/SSapp.png" class="sunSchermen">
+					<h3>Behavior design</h3>
+				</div>
+				<div class="div4">
+					<p class="Pcase">Op deze website en app zitten een aantal psychologische theorieën waarmee de
+						leguaan op een ethische wijze wordt gestimuleerd om onze app te kopen. Zo
+						wordt de leguaan door een "funnel" geleidt waar hij doormiddel van kleine trucjes overtuigd
+						wordt zich aan te sluiten bij SunSeekers. Benieuwd naar deze trucjes of mijn proces? Neem gerust
+						contact met me op, info staat in de footer. </p>
+				</div>
+				<div class="div5">
+					<h3>Visual design</h3>
+				</div>
+				<div class="div6">
+					<p class="Pcase">Voor de visuals ben ik in het thema gebleven van het leefgebied van de leguaan en
+						de zon, ik heb
+						dus geel als hoofdkleur gebruikt. De look and feel van dit project is professioneel en modern.
+						Hier heb ik voor gekozen omdat
+						het een geloofwaardig concept moet zijn waar de leguaan zich bij aan wil sluiten en hier trots
+						op is. Om de leguanen wel nog te
+						laten resoneren met dit concept heb ik het nog wat toegankelijker gemaakt met de doodles en de
+						fotografie.
+					</p>
+				</div>
+			</div>
+
+			<img src="images/MockupSS2.png" class="sunWoordlogo">
+			<div class="schermen">
+				<img src="images/SSlandingscherm.png" class="sunSchermen">
+				<img src="images/SSscherm2.png" class="sunSchermen">
+				<img src="images/SSscherm5.png" class="sunSchermen">
+				<img src="images/SSscherm3.png" class="sunSchermen">
+				<img src="images/SSinstellingen.png" class="sunSchermen">
+				<img src="images/SSscherm4.png" class="sunSchermen">
+				<img src="images/SSmeldingen.png" class="sunSchermen">
+				<img src="images/SSscherm1.png" class="sunSchermen">
+				<img src="images/SSapp.png" class="sunSchermen">
 
 
 
 
 
-</div>
-<img src="images/MockupSS.png" class="sunWoordlogo">
-<img src="images/MockupSS3.png" class="sunWoordlogo">
-<div class="volgendeC">
-	<a href="Boekenzoeker.html">&lt;Volgende case&gt;</a>
-</div>
-<img id=zwartGat src="images/Rectangle82.png">
+			</div>
+			<img src="images/MockupSS.png" class="sunWoordlogo">
+			<img src="images/MockupSS3.png" class="sunWoordlogo">
+			<div class="volgendeC">
+				<a href="Boekenzoeker.html">&lt;Volgende case&gt;</a>
+			</div>
+			<img id=zwartGat src="images/Rectangle82.png">
 		</section>
 
 	</main>
