--- a/passieproject.html
+++ b/passieproject.html
@@ -77,7 +77,7 @@
 				<img src="images/STTPion.png">
 			</div>
 			<img src="images/STTkaart.png" class="sunWoordlogo">
-<img src="images/STTFoto.png" class="sunWoordlogo">
+<img src="images/STTfoto32.png" class="sunWoordlogo">
 			<div class="volgendeC">
 				<a href="plog.html">&lt;Volgende case&gt;</a>
 			</div>
